Fixed main container that was overlapping content

--- a/app/assets/stylesheets/components/_containers.scss
+++ b/app/assets/stylesheets/components/_containers.scss
@@ -1,6 +1,6 @@
 .main-container {
   // width: 375px;
-  height: 500px;
+  height: auto;
   padding: 50px 30px 80px 30px;
 
 }
